More changes for version 3.  Moved the text editor to use RichTextFX, the Swing components are still there (to enable function copying) but are no longer used.  They will be removed in a future update.